--- a/app/src/main/res/layout/widget_current_weather.xml
+++ b/app/src/main/res/layout/widget_current_weather.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="@{weather.getCalculationTimestamp() == null ? @string/unknown_calculation_date : StringUtils.formatWeatherCalculationDate(@string/language, @string/calculation_date_format, weather.getCalculationTimestamp())}"
+            android:text="@{weather.getCalculationTimestamp() == null ? @string/unknown_calculation_date : StringUtils.formatWeatherCalculationDate(@string/language, @string/calculation_date_format, safeUnbox(weather.getCalculationTimestamp()))}"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -123,7 +123,7 @@
             android:layout_width="20dp"
             android:layout_height="33dp"
             android:contentDescription="@{weather.getWindDirectionNormalized() == null ? @string/unknown_wind_direction : String.format(locale, @string/wind_direction_value, weather.getWindDirectionNormalized(), context.getString(weather.getWindDirectionOrientation()))}"
-            android:rotation="@{(weather.getWindDirection() == null ? -180 : weather.getWindDirection())+180}"
+            android:rotation="@{weather.getWindDirection() == null ? 0 : safeUnbox(weather.getWindDirection())+180}"
             android:tint="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="@+id/weather_wind_direction_circle"
             app:layout_constraintEnd_toEndOf="@+id/weather_wind_direction_circle"
