Add Settings screen and its application Add more unit tests

--- a/app/src/main/res/layout/activity_current_weather.xml
+++ b/app/src/main/res/layout/activity_current_weather.xml
@@ -7,6 +7,14 @@
         <import type="net.gahfy.chilindoweather.utils.StringUtils" />
 
         <variable
+            name="preferredTemperatureIndex"
+            type="int" />
+
+        <variable
+            name="preferredSoeedIndex"
+            type="int" />
+
+        <variable
             name="weather"
             type="net.gahfy.chilindoweather.model.weather.CurrentWeather" />
 
@@ -18,16 +26,18 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/current_weather_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp">
 
         <TextView
             android:id="@+id/weather_calculation_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
             android:text="@{weather.getCalculationTimestamp() == null ? @string/unknown_calculation_date : StringUtils.formatWeatherCalculationDate(@string/language, @string/calculation_date_format, safeUnbox(weather.getCalculationTimestamp()))}"
-            android:textColor="#FFFFFF"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -36,9 +46,8 @@
             android:id="@+id/weather_wind_speed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:text="@{weather.getWindSpeed() == null ? @string/unknown_wind_speed : String.format(locale, @string/wind_speed, weather.getWindSpeed())}"
-            android:textColor="#FFFFFF"
+            android:layout_marginEnd="0dp"
+            android:text="@{weather.getWindSpeed(preferredSoeedIndex) == null ? @string/unknown_wind_speed : String.format(locale, preferredSoeedIndex == 0 ? @string/wind_speed_metric : @string/wind_speed_imperial, weather.getWindSpeed(preferredSoeedIndex))}"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/weather_calculation_date" />
@@ -48,7 +57,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/wind_directon_label"
-            android:textColor="#FFFFFF"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/weather_wind_speed"
             app:layout_constraintTop_toBottomOf="@+id/weather_wind_speed" />
@@ -58,7 +66,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{weather.getWindDirectionNormalized() == null ? @string/unknown_wind_direction : String.format(locale, @string/wind_direction_value, weather.getWindDirectionNormalized(), context.getString(weather.getWindDirectionOrientation()))}"
-            android:textColor="#FFFFFF"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/weather_wind_speed"
             app:layout_constraintTop_toBottomOf="@+id/weather_direction_label" />
@@ -70,7 +77,6 @@
             android:layout_marginEnd="90dp"
             android:layout_marginTop="48dp"
             android:text="@string/humidity_label"
-            android:textColor="#FFFFFF"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/weather_wind_speed"
             app:layout_constraintTop_toBottomOf="@+id/weather_gust_speed" />
@@ -80,7 +86,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{weather.getHumidity() == null ? @string/unknown_humidity : String.format(locale, @string/humidity_value, weather.getHumidity())}"
-            android:textColor="#FFFFFF"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/weather_humidity_label"
             app:layout_constraintEnd_toEndOf="@+id/weather_wind_speed"
@@ -91,7 +96,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/pressure_label"
-            android:textColor="#FFFFFF"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@+id/weather_humidity_label"
             app:layout_constraintTop_toBottomOf="@+id/weather_humidity_label" />
@@ -101,7 +105,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{weather.getAtmosphericPressure() == null ? @string/unknown_pressure : String.format(locale, @string/pressure_value, weather.getAtmosphericPressure())}"
-            android:textColor="#FFFFFF"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/weather_pressure_label"
             app:layout_constraintEnd_toEndOf="@+id/weather_wind_speed"
@@ -135,7 +138,7 @@
             android:id="@+id/weather_temperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{weather.getTemperature() == null ? @string/unknown_temperature : String.format(locale, @string/temperature_value, weather.getTemperature())}"
+            android:text="@{weather.getTemperature(preferredTemperatureIndex) == null ? @string/unknown_temperature : String.format(locale, @string/temperature_value, weather.getTemperature(preferredTemperatureIndex))}"
             android:textColor="#fddf03"
             android:textSize="53sp"
             app:layout_constraintBottom_toBottomOf="@+id/weather_pressure_label"
