--- a/app/src/main/res/layout/activity_common.xml
+++ b/app/src/main/res/layout/activity_common.xml
@@ -23,10 +23,14 @@
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
             <FrameLayout
-                android:id="@+id/content_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="?attr/actionBarSize">
+
+                <FrameLayout
+                    android:id="@+id/content_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"></FrameLayout>
 
                 <View
                     android:layout_width="match_parent"
@@ -42,7 +46,7 @@
             android:layout_gravity="start"
             android:background="@color/menu_background"
             android:fitsSystemWindows="true"
-            app:headerLayout="@layout/header_view"
+            app:headerLayout="@layout/view_menu_header"
             app:itemIconTint="@color/black"
             app:itemTextColor="@color/black"
             app:menu="@menu/drawer_view" />
