--- a/app/src/main/res/layout/activity_current_weather.xml
+++ b/app/src/main/res/layout/activity_current_weather.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <import type="net.gahfy.chilindoweather.utils.StringUtils" />
+
+        <import type="java.util.Locale" />
 
         <variable
             name="preferredTemperatureIndex"
             type="int" />
 
         <variable
-            name="preferredSoeedIndex"
+            name="preferredSpeedIndex"
             type="int" />
 
         <variable
@@ -37,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
-            android:text="@{weather.getCalculationTimestamp() == null ? @string/unknown_calculation_date : StringUtils.formatWeatherCalculationDate(@string/language, @string/calculation_date_format, safeUnbox(weather.getCalculationTimestamp()))}"
+            android:text="@{weather.getCalculationTimestamp() == null ? @string/unknown_calculation_date : StringUtils.formatDate(@string/language, @string/calculation_date_format, safeUnbox(weather.getCalculationTimestamp()))}"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -47,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
-            android:text="@{weather.getWindSpeed(preferredSoeedIndex) == null ? @string/unknown_wind_speed : String.format(locale, preferredSoeedIndex == 0 ? @string/wind_speed_metric : @string/wind_speed_imperial, weather.getWindSpeed(preferredSoeedIndex))}"
+            android:text="@{weather.getWindSpeed(preferredSpeedIndex) == null ? @string/unknown_wind_speed : String.format(locale, preferredSpeedIndex == 0 ? @string/wind_speed_metric : @string/wind_speed_imperial, weather.getWindSpeed(preferredSpeedIndex))}"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/weather_calculation_date" />
@@ -139,20 +141,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{weather.getTemperature(preferredTemperatureIndex) == null ? @string/unknown_temperature : String.format(locale, @string/temperature_value, weather.getTemperature(preferredTemperatureIndex))}"
-            android:textColor="#fddf03"
+            android:textColor="@color/colorPrimary"
             android:textSize="53sp"
             app:layout_constraintBottom_toBottomOf="@+id/weather_pressure_label"
             app:layout_constraintStart_toStartOf="@+id/weather_calculation_date" />
 
         <ImageView
             android:id="@+id/weather_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:contentDescription="@{weather.getConditionDescriptionResId()}"
             android:src="@{weather.getIconResId()}"
             app:layout_constraintBottom_toTopOf="@+id/weather_temperature"
             app:layout_constraintEnd_toStartOf="@+id/weather_humidity_label"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/weather_calculation_date" />
+            app:layout_constraintTop_toBottomOf="@+id/weather_calculation_date"
+            tools:src="@drawable/broken_clouds" />
     </android.support.constraint.ConstraintLayout>
 </layout>
