--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#D500F9</color>
     <color name="black">#000</color>
     <color name="window_background">#0060ac</color>
+    <color name="background_dark">#004aa1</color>
     <color name="white">#fff</color>
     <color name="separator_color">#30FFFFFF</color>
 
