--- a/app/src/main/res/layout/item_forecast_day.xml
+++ b/app/src/main/res/layout/item_forecast_day.xml
@@ -6,8 +6,8 @@
         <import type="net.gahfy.chilindoweather.utils.StringUtils" />
 
         <variable
-            name="dateTimestamp"
-            type="Integer" />
+            name="dayWeatherForecast"
+            type="net.gahfy.chilindoweather.model.weather.DayWeatherForecast" />
 
     </data>
 
@@ -20,6 +20,6 @@
         android:paddingEnd="16dp"
         android:paddingStart="16dp"
         android:paddingTop="6dp"
-        android:text="@{dateTimestamp == null ? @string/unknown_calculation_date : StringUtils.formatDateWithLongWeekDay(@string/language, @string/date_format_forecast, safeUnbox(dateTimestamp), @stringArray/week_days, @stringArray/months)}"
+        android:text="@{dayWeatherForecast.getCalculationDateTime(context)}"
         android:textSize="16sp" />
 </layout>
