--- a/app/src/main/res/layout/item_weather_forecast.xml
+++ b/app/src/main/res/layout/item_weather_forecast.xml
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="@{forecast.getCalculationTimestamp() == null ? @string/unknown_calculation_date : StringUtils.formatDate(@string/language, @string/forecast_time_format, safeUnbox(forecast.getCalculationTimestamp()))}"
+                android:text="@{forecast.getCalculationTime(context)}"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
