Improve InstantWeatherForecast model

--- a/app/src/main/res/layout/item_weather_forecast.xml
+++ b/app/src/main/res/layout/item_weather_forecast.xml
@@ -52,9 +52,9 @@
                 android:layout_width="@dimen/forecast_image_width"
                 android:layout_height="40dp"
                 android:layout_marginStart="55dp"
-                android:contentDescription="@{forecast.getConditionDescription()}"
+                android:contentDescription="@{forecast.getConditionDescriptionResId()}"
                 android:foregroundGravity="center_horizontal"
-                android:src="@{forecast.getConditionIcon()}"
+                android:src="@{forecast.getIconResId()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/forecast_time"
                 app:layout_constraintTop_toTopOf="parent"
@@ -66,13 +66,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/forecast_element_margin"
                 android:gravity="center_horizontal"
-                android:text="@{forecast.getTemperature(preferredTemperatureIndex) == null ? @string/unknown_temperature : String.format(locale, @string/temperature_value, forecast.getTemperature(preferredTemperatureIndex))}"
+                android:text="@{forecast.getTemperature(context, preferredTemperatureIndex)}"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/condition_image"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="888°" />
+                tools:text="135°" />
 
             <ImageView
                 android:id="@+id/weather_wind_direction_circle"
@@ -90,8 +90,8 @@
                 android:id="@+id/weather_wind_direction_arrow"
                 android:layout_width="17dp"
                 android:layout_height="16.5dp"
-                android:contentDescription="@{forecast.getWindDirectionNormalized() == null ? @string/unknown_wind_direction : String.format(locale, @string/wind_direction_value, forecast.getWindDirectionNormalized(), forecast.getWindDirectionOrientation() == 0 ? @string/empty : context.getString(forecast.getWindDirectionOrientation()))}"
-                android:rotation="@{forecast.getWindDirection() == null ? 0 : safeUnbox(forecast.getWindDirection())+180}"
+                android:contentDescription="@{forecast.getWindDirection(context)}"
+                android:rotation="@{forecast.getWindDirectionAngle()}"
                 android:src="@{@drawable/wind_direction_arrow}"
                 android:tint="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="@+id/weather_wind_direction_circle"
@@ -104,7 +104,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/forecast_element_margin"
-                android:text="@{forecast.getWindSpeed(preferredSpeedIndex) == null ? @string/unknown_wind_speed : String.format(locale, preferredSpeedIndex == 0 ? @string/wind_speed_metric : @string/wind_speed_imperial, forecast.getWindSpeed(preferredSpeedIndex))}"
+                android:text="@{forecast.getWindSpeed(context, preferredSpeedIndex)}"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/weather_wind_direction_circle"
